--- a/leaflet-layer-sealevel-denmark.css
+++ b/leaflet-layer-sealevel-denmark.css
@@ -3,7 +3,7 @@
   margin-bottom: 0px;
 }
 
-@media screen and (min-width: 641px) and (min-height: 641px) {
+@media screen and (orientation: landscape) and (min-width: 641px) and (min-height: 481px), screen and (orientation: portrait) and (min-width: 481px) and (min-height: 641px) {
     div.leaflet-control-datetime-title {
         display: block;
     }
