--- a/demo/bower_components.css
+++ b/demo/bower_components.css
@@ -12163,7 +12163,7 @@ Bootstrap allready have the following classes
 .font-italic
 
 */
-.container-icon-and-text > *.after-icon {
+.container-icon-and-text > *:not(:first-child) {
   padding-left: 0.3em; }
 
 /************************************************************
